cabal-version: 2.1
name: euphoric
version: 0.1
author: Vladislav Zavialov
build-type: Simple

library
  exposed-modules:
    Euphoric
  build-depends:
    base, transformers
  default-language:
    Haskell2010
  default-extensions:
    AllowAmbiguousTypes
    ConstraintKinds
    DataKinds
    DeriveGeneric
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    PartialTypeSignatures
    PolyKinds
    ScopedTypeVariables
    RankNTypes
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
    UndecidableSuperClasses
    BlockArguments
    LambdaCase
  hs-source-dirs: src
  ghc-options: -Wall -O2
