cabal-version: 3.0
name: euphoric
version: 0.1
author: Vladislav Zavialov
build-type: Simple

library
  exposed-modules:
    MiniQ
    Euphoric
    Example
  build-depends:
    base, ghc-experimental, transformers, template-haskell
  default-language:
    GHC2024
  default-extensions:
    AllowAmbiguousTypes
    ConstraintKinds
    DataKinds
    DeriveGeneric
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    PartialTypeSignatures
    PolyKinds
    ScopedTypeVariables
    RankNTypes
    RequiredTypeArguments
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
    UndecidableSuperClasses
    BlockArguments
    LambdaCase
    NoListTuplePuns
    NoStarIsType
    DerivingStrategies
  hs-source-dirs: src
  ghc-options: -Wall -O2
